--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,3 +1,4 @@
+
 hystrix:
   command:
     default: # Command Key
@@ -9,3 +10,7 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 60000
+app:
+  aws:
+    region: us-east-1
+    queue-url: https://sqs.us-east-1.amazonaws.com/346901423380/orders
