--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,7 +1,6 @@
-
 hystrix:
   command:
-    default: # Command Key
+    createOrderCommand: # Command Key
       execution:
         # Option-1
         timeout:
