--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,16 +1,33 @@
 app.aws.region=us-east-1
 app.aws.queue-url=https://sqs.us-east-1.amazonaws.com/346901423380/orders
 app.aws.table-name=orders
-#createOrderCommand
+app.inventory-base-url=http://localhost:6766
+#Hystrix Properties
+hystrix.circuitbreaker.enabled=true
+################################
+#   createOrderCommand
+###############################
+# hystrix
 hystrix.command.createOrderCommand.execution.timeout.enabled=false
-hystrix.command.createOrderCommand.execution.isolation.thread.timeoutInMilliseconds=60000
+#hystrix.command.createOrderCommand.execution.isolation.thread.timeoutInMilliseconds=60000
+################################
+#   fetchItemCommand
+###############################
+# hystrix
+hystrix.command.fetchItemCommand.execution.isolation.thread.timeoutInMilliseconds=20000
+hystrix.command.fetchItemCommand.circuitBreaker.enabled=true
+hystrix.command.fetchItemCommand.circuitBreaker.requestVolumeThreshold=5
+hystrix.command.fetchItemCommand.circuitBreaker.errorThresholdPercentage=80
+# retry
+fetchItemCommand.retry.maxAttempts=5
+fetchItemCommand.retry.backoff.delayInMilliseconds=1000
+fetchItemCommand.retry.backoff.maxDelayInMilliseconds=3000
+fetchItemCommand.retry.backoff.multiplier=2
+##
+# Invocations:
 #
-#fetchItemCommand1
-hystrix.command.fetchItemCommand1.execution.timeout.enabled=false
+# After 1s ~ Delay = 1000
+# After 2s ~ Delay = 1000 * 2 = 4000
+# After 4s ~ Delay = 4000 * 2 = 8000 with Max Delay of 5000
 #
-#fetchItemCommand2
-hystrix.command.fetchItemCommand2.execution.isolation.thread.timeoutInMilliseconds=60000
-#
-#fetchItemCommand3
-hystrix.command.fetchItemCommand3.execution.timeout.enabled=false
-#
+#----------------END--------------------
