--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -20,16 +20,7 @@ hystrix.command.fetchItemCommand.circuitBreaker.errorThresholdPercentage=80
 hystrix.command.fetchItemCommand.execution.isolation.thread.timeoutInMilliseconds=20000
 hystrix.command.fetchItemCommand.metrics.rollingStats.timeInMilliseconds=1000
 # retry
-fetchItemCommand.retry.maxAttempts=5
-fetchItemCommand.retry.backoff.delayInMilliseconds=1000
-fetchItemCommand.retry.backoff.maxDelayInMilliseconds=5000
-fetchItemCommand.retry.backoff.multiplier=2
-##
-# Invocations:
-#
-# After 1s ~ Delay = 1000
-# After 2s ~ Delay = 1000 * 2 = 2000
-# After 4s ~ Delay = 2000 * 2 = 4000
-# After 8s ~ Delay = 4000 * 2 = 8000 with Max Delay of 5000
-#
+fetchItemCommand.retry.maxAttempts=3
+fetchItemCommand.retry.backoff.delayInMilliseconds=1
+fetchItemCommand.retry.backoff.multiplier=1
 #----------------END--------------------
