--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>18-hystrix-resilency-patterns</artifactId>
+	<packaging>pom</packaging>
 	<version>1.0.0-SNAPSHOT</version>
+
+	<modules>
+		<module>order-service</module>
+		<module>inventory-service</module>
+	</modules>
 
 	<parent>
 		<groupId>io.github.bhuwanupadhyay</groupId>
