--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,7 @@ app.aws.region=us-east-1
 app.aws.queue-url=https://sqs.us-east-1.amazonaws.com/346901423380/orders
 app.aws.table-name=orders
 app.inventory-base-url=http://localhost:6766
+app.customer-base-url=http://localhost:6766
 #Hystrix Properties
 hystrix.circuitbreaker.enabled=true
 # Default values for all Hystrix Command
@@ -23,4 +24,14 @@ hystrix.command.fetchItemCommand.metrics.rollingStats.timeInMilliseconds=1000
 fetchItemCommand.retry.maxAttempts=3
 fetchItemCommand.retry.backoff.delayInMilliseconds=1
 fetchItemCommand.retry.backoff.multiplier=1
+#----------------END--------------------
+################################
+#   fetchCustomerCommand
+################################
+# hystrix
+hystrix.command.fetchCustomerCommand.circuitBreaker.requestVolumeThreshold=1
+hystrix.command.fetchCustomerCommand.circuitBreaker.errorThresholdPercentage=10
+hystrix.command.fetchCustomerCommand.circuitBreaker.sleepWindowInMilliseconds=5000
+hystrix.command.fetchCustomerCommand.metrics.healthSnapshot.intervalInMilliseconds=500
+hystrix.command.fetchCustomerCommand.execution.isolation.thread.timeoutInMilliseconds=1000
 #----------------END--------------------
